# CS499-ePortfolio

./: .gitignore  index.html  styles.css
CS320-Original/main/: Appointment.java  AppointmentService.java  Contact.java  ContactService.java  Task.java  TaskService.java
CS320-Original/test/: AppointmentServiceTest.java  AppointmentTest.java  ContactServiceTest.java  ContactTest.java  TaskServiceTest.java  TaskTest.java
ContactApp/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Contact.vcxproj  Contact.vcxproj.filters  ContactApp.sln  ContactApp.vcxproj  ContactApp.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  contacts.db
ContactApp/UI/: addappointment.cpp  addappointment.h  addcontact.cpp  addcontact.h  addtask.cpp  addtask.h  appointmentcard.cpp  appointmentcard.h  displayappointments.cpp  displayappointments.h  displaytasks.cpp  displaytasks.h  home.cpp  home.h  login.cpp  login.h  mainwindow.cpp  mainwindow.h
ContactApp/lib/: sqlite3.lib
ContactApp/src/: Contact.h  accountdatabase.cpp  accountdatabase.h  appointment.cpp  appointment.h  appointmentdatabase.cpp  appointmentdatabase.h  contact.cpp  contactdatabase.cpp  contactdatabase.h  contactservice.cpp  contactservice.h  displayContacts.cpp  displayContacts.h  main.cpp  resource.h  task.cpp  task.h  taskdatabase.cpp  taskdatabase.h  taskservice.cpp  taskservice.h
